# ckanext-activityinfo

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  test.ini
.github/workflows/: test-ckan-2.10.yml  test-ckan-2.11.yml  test.yml
ckanext/activityinfo/: exceptions.py  helpers.py  plugin.py  utils.py
ckanext/activityinfo/actions/: activity_info.py  resource.py
ckanext/activityinfo/assets/: script.js  webassets.yml
ckanext/activityinfo/assets/css/: activityinfo.css
ckanext/activityinfo/assets/js/: activityinfo-download.js  activityinfo-select-formats.js  activityinfo-update.js  activityinfo.js
ckanext/activityinfo/auth/: activity_info.py
ckanext/activityinfo/blueprints/: activity_info.py  admin.py
ckanext/activityinfo/cli/: __init__.py  databases.py  forms.py  logs.py  resources.py
ckanext/activityinfo/data/: base.py
ckanext/activityinfo/data/samples/: database.json  databases.json  form-tree-translated.json  job-complete.json  job-started.json
ckanext/activityinfo/jobs/: __init__.py  download.py
ckanext/activityinfo/templates/: base.html
ckanext/activityinfo/templates/activity_info/: admin.html  base.html  databases.html  form_details.html  forms.html  index.html
ckanext/activityinfo/templates/activity_info/snippets/: modal_download.html
ckanext/activityinfo/templates/admin/: base.html
ckanext/activityinfo/templates/package/: resource_read.html
ckanext/activityinfo/templates/package/snippets/: resource_item.html  resource_upload_field.html
ckanext/activityinfo/templates/user/: read_base.html
ckanext/activityinfo/tests/: conftest.py  factories.py  fixtures.py  test_actions.py  test_activityinfo_client.py  test_base.py  test_cli_resources.py  test_download_endpoints.py  test_enable_flag.py  test_home.py  test_home_api_key.py  test_plugin.py  test_resource_auto_update.py  test_sync_auto_updates.py  test_tmp_dir_config.py  test_ui_create_api_key.py  test_ui_databases.py  test_ui_form.py  test_ui_forms.py  test_ui_remove_api_key.py  test_ui_update_api_key.py
