[project]
name = "ckanext-activityinfo"
version = "0.1.1"
description = "A CKAN extension to connect with the ActivityInfo.org service"
readme = "README.md"
authors = [
    {name = "OKFN", email = "info@okfn.org"}
]
license = {text = "AGPL"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

keywords = [ "CKAN", "extension,", "ActivityInfo", ]
dependencies = []

[project.urls]
Homepage = "https://github.com/okfn/ckanext-activityinfo"

[project.entry-points."ckan.plugins"]
activityinfo = "ckanext.activityinfo.plugin:ActivityinfoPlugin"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
filterwarnings = [
        "ignore::sqlalchemy.exc.SADeprecationWarning",
        "ignore::sqlalchemy.exc.SAWarning",
        "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"
